[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Character(nextcharacter).tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/CharacterControl.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MainCardsBack.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/NeedTo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Resources/GFX/MainCards/CardShirt.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 835.374, 1150.14 )

[sub_resource type="Animation" id=2]
resource_name = "Apperiance"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 540, 1122 ), Vector2( 540, 1000 ), Vector2( 540, 1122 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -25.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainCardsBack:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ false ],
"method": "set_process_input"
}, {
"args": [ true ],
"method": "set_process_input"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "LChooseText"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterCard/Control/RightChooseRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterCard/Control/RightChooseRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 500.001, 800 ), Vector2( 501.001, 801 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "RChooseText"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterCard/Control/LeftChooseRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterCard/Control/LeftChooseRect:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800, 500 ), Vector2( 801, 501 ) ]
}

[node name="CharacterControl" type="Area2D" groups=[
"CharacterControl",
]]
position = Vector2( 540, 1122 )
script = ExtResource( 2 )

[node name="NeedTo" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CharacterCard" parent="." instance=ExtResource( 1 )]

[node name="LeftChooseRect" parent="CharacterCard/Control" index="0"]
modulate = Color( 1, 1, 1, 0 )

[node name="RightChooseRect" parent="CharacterCard/Control" index="1"]
modulate = Color( 1, 1, 1, 0 )

[node name="LeftChoose" type="Position2D" parent="."]
position = Vector2( -450, 0 )

[node name="RightChoose" type="Position2D" parent="."]
position = Vector2( 450, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Apperiance = SubResource( 2 )
anims/LChooseText = SubResource( 3 )
anims/RChooseText = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer_choosedone" type="Timer" parent="."]
wait_time = 0.01

[node name="MainCardsBack" parent="." instance=ExtResource( 3 )]
margin_left = -419.967
margin_top = -422.51
margin_right = 420.033
margin_bottom = 427.49
texture = ExtResource( 5 )

[connection signal="input_event" from="." to="." method="_on_CharacterControl_input_event"]
[connection signal="timeout" from="Timer_choosedone" to="." method="_on_Timer_choosedone_timeout"]

[editable path="NeedTo"]
[editable path="CharacterCard"]
